Instruções da aula 11

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <p>Fernanda</p>
     <div class="menu"></div>
     <div class="botoes">
-        <div class="btn-01">Botao 01</div>
-        <div class="btn-02">Botao 02</div>
+        <div class="botao-padrao btn-01">Botao 01</div>
+        <div class="botao-padrao btn-02">Botao 02</div>
     </div>
 </body>
 </html>
