Finalizando exercicio 15: tela de Login da NETFLIX responsiva

--- a/aula15/index.html
+++ b/aula15/index.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container"></div>
+   <div class="bg-black">
+    <div class="container">
+        <h2>Entrar</h2>
+
+        <div class="container-inputs">
+            <input type="email" placeholder="E-mail" class="input">
+            <input type="password" placeholder="Senha" class="input">
+        </div>
+
+        <div class="lembre">
+            <input type="checkbox" id="lembrar-senha">
+            <label for="lembrar-senha">Lembre-se de mim</label>
+        </div>
+
+        <button class="entrar">Entrar</button>
+
+        <p>OU</p>
+
+        <button class="codigo">Usar um código de acesso</button>
+
+        <p class="primeiro-acesso">Primeira vez aqwui? <span>Clique aqui</span></p>
+    </div>
+
+    <img src="./img/logo.png" alt="logo netflix">
+
+   </div>
 </body>
 </html>
